# carp-coi

./: .gitignore  README.md  pyproject.toml
onboard/: git.ipynb  глоссарий.md
введение в мо/1/: HW1new.ipynb
введение в мо/10/: HW_10_.ipynb  Practice_10.ipynb
введение в мо/11/: HW11.ipynb  Lecture_11_Errors_Matrix.pptx
введение в мо/12/: HW_12.ipynb  Lecture_12_ROC_PR_AUCS.pptx
введение в мо/13/: HW_13.ipynb
введение в мо/14/: HW_14.ipynb
введение в мо/15/: HW_15_.ipynb  Lecture_15_Space_Dimension_Reduction.pptx
введение в мо/16/: HW16.ipynb  Lecture_16_KNN.pptx
введение в мо/17/: HW_17.ipynb  Lecture_17_Decision_Trees.pptx
введение в мо/18/: HW_18.ipynb
введение в мо/19/: HW_19.ipynb  Lecture_19_Bagging_And_Stacking — копия.pptx
введение в мо/2/: HW_2.ipynb
введение в мо/20/: HW_20_.ipynb  HW_20_пачка.ipynb  Lecture_20_Boosting_And_BVT.pptx
введение в мо/21/: HW_21.ipynb  Lecture_21_Clustering.pptx
введение в мо/3/: HW_3.ipynb
введение в мо/4/: HW_4.ipynb
введение в мо/5/: HW5_NEW.ipynb
введение в мо/6/: HW_6.ipynb
введение в мо/7/: HW_7.ipynb  Practice_7.ipynb
введение в мо/8/: HW_8.ipynb  Lecture_8_Additional_Info.pptx
введение в мо/9/: Practice_9_new.ipynb
